<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.choiceActivity.ChoiceActivity">

    <TextView
        android:id="@+id/txNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="25sp"></TextView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_centerInParent="true"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <Button
            android:id="@+id/Encode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/buttonBackround"
            android:text="@string/encode"
            android:textColor="@color/black"></Button>

        <Button
            android:id="@+id/Decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_below="@+id/Encode"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/buttonBackround"
            android:text="@string/decode"
            android:textColor="@color/black"></Button>

        <Button
            android:id="@+id/keygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_below="@+id/Decode"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/buttonBackround"
            android:text="@string/key"
            android:textColor="@color/black"></Button>

        <Button
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_below="@+id/keygen"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/buttonBackround"
            android:text="@string/logout"
            android:textColor="@color/black"></Button>
    </GridLayout>
</RelativeLayout>